test-harness/src/snapshots/toolchain__reordering into-coq.snap
---
source: test-harness/src/harness.rs
expression: snapshot
info:
  kind:
    Translate:
      backend: coq
  info:
    name: reordering
    manifest: reordering/Cargo.toml
    description: ~
  spec:
    optional: false
    broken: false
    issue_id: ~
    positive: true
    snapshot:
      stderr: false
      stdout: true
    include_flag: ~
    backend_options: ~
---
exit = 0

[stdout]
diagnostics = []

[stdout.files]
"Reordering.v" = '''
(* File automatically generated by Hacspec *)
From Coq Require Import ZArith.
Require Import List.
Import List.ListNotations.
Open Scope Z_scope.
Open Scope bool_scope.
Require Import Ascii.
Require Import String.
Require Import Coq.Floats.Floats.
From RecordUpdate Require Import RecordSet.
Import RecordSetNotations.



(* NotImplementedYet *)

Definition no_dependency_1_ (_ : unit) : unit :=
  tt.

Definition no_dependency_2_ (_ : unit) : unit :=
  tt.

Inductive t_Foo : Type :=
| Foo_A
| Foo_B.
Arguments t_Foo:clear implicits.
Arguments t_Foo.

Definition f (_ : t_u32) : t_Foo :=
  Foo_A.

Record t_Bar : Type :=
  {
    0 : t_Foo;
  }.
Arguments t_Bar:clear implicits.
Arguments t_Bar.
Arguments Build_t_Bar.
#[export] Instance settable_t_Bar : Settable _ :=
  settable! (@Build_t_Bar) <0>.

Definition g (_ : unit) : t_Bar :=
  Build_t_Bar (f (32)).

Definition t_Foo_cast_to_repr (x : t_Foo) : t_isize :=
  match x with
  | Foo_A =>
    0
  | Foo_B =>
    1
  end.

(* NotImplementedYet *)

(* NotImplementedYet *)
'''
"Reordering_No_dependency.v" = '''
(* File automatically generated by Hacspec *)
From Coq Require Import ZArith.
Require Import List.
Import List.ListNotations.
Open Scope Z_scope.
Open Scope bool_scope.
Require Import Ascii.
Require Import String.
Require Import Coq.Floats.Floats.
From RecordUpdate Require Import RecordSet.
Import RecordSetNotations.

Definition u01 (_ : unit) : unit :=
  tt.

Definition r02 (_ : unit) : unit :=
  tt.

Definition b03 (_ : unit) : unit :=
  tt.

Definition f04 (_ : unit) : unit :=
  tt.

Definition h05 (_ : unit) : unit :=
  tt.

Definition i06 (_ : unit) : unit :=
  tt.

Definition c07 (_ : unit) : unit :=
  tt.

Definition k08 (_ : unit) : unit :=
  tt.

Definition d09 (_ : unit) : unit :=
  tt.

Definition e10 (_ : unit) : unit :=
  tt.

Definition g11 (_ : unit) : unit :=
  tt.

Definition j12 (_ : unit) : unit :=
  tt.

Definition o13 (_ : unit) : unit :=
  tt.

Definition a14 (_ : unit) : unit :=
  tt.

Definition q15 (_ : unit) : unit :=
  tt.

Definition m16 (_ : unit) : unit :=
  tt.

Definition l17 (_ : unit) : unit :=
  tt.

Definition n18 (_ : unit) : unit :=
  tt.

Definition v19 (_ : unit) : unit :=
  tt.

Definition s20 (_ : unit) : unit :=
  tt.

Definition p21 (_ : unit) : unit :=
  tt.

Definition t22 (_ : unit) : unit :=
  tt.
'''
"Reordering_Sandwich_of_dependencies.v" = '''
(* File automatically generated by Hacspec *)
From Coq Require Import ZArith.
Require Import List.
Import List.ListNotations.
Open Scope Z_scope.
Open Scope bool_scope.
Require Import Ascii.
Require Import String.
Require Import Coq.Floats.Floats.
From RecordUpdate Require Import RecordSet.
Import RecordSetNotations.

Definition f (_ : unit) : unit :=
  g (tt).

Definition unrelated (_ : unit) : unit :=
  tt.

Definition g (_ : unit) : unit :=
  tt.

Definition h (_ : unit) : unit :=
  f (tt).
'''
